Eigenvalues aren't necessarily greater than 1

--- a/pca.Rmd
+++ b/pca.Rmd
@@ -68,7 +68,7 @@ $(6, 4)^T$ is an **eigenvector** of the square matrix, and 4 is its **eigenvalue
 
 --
 
-The square matrix makes the eigenvector *bigger*, but it doesn't change its *direction*.
+The square matrix changes the eigenvector's *size*, but it doesn't change its *direction*.
 
 ---
 # Linear algebra you forgot in 1st-year uni
